--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -8,22 +8,63 @@
                     android:id="@+id/view_order_background"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/rounded_corner"
+                    android:background="@drawable/rounded_corner_dark"
                     android:orientation="vertical"
                     android:padding="@dimen/activity_vertical_margin" >
 
                     <LinearLayout
                         android:id="@+id/view_order_header"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/rounded_corner_dark" >
+
+                        <ImageView
+                            android:id="@+id/view_order_profile_picture"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:layout_marginRight="3dp"
+                            android:scaleType="fitCenter" />
+
+                        <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" >
+
+                            <TextView
+                                android:id="@+id/view_order_item_number"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:paddingLeft="@dimen/activity_vertical_margin"
+                                android:paddingRight="@dimen/activity_vertical_margin"
+                                android:text="100012"
+                                android:textAppearance="?android:attr/textAppearanceLarge"
+                                android:textSize="48sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/view_order_profile_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                                android:paddingLeft="@dimen/activity_horizontal_margin"
+                                android:textAppearance="?android:attr/textAppearanceLarge"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:background="@drawable/rounded_corner_dark"
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/view_order_number"
+                            android:id="@+id/view_order_state_description"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center_horizontal"
                             android:padding="@dimen/activity_vertical_margin"
                             android:text="Order 12 (NEW)"
                             android:textAppearance="?android:attr/textAppearanceMedium"
@@ -36,7 +77,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_vertical_margin"
-                        android:background="@drawable/rounded_corner"
                         android:orientation="vertical" >
 
                         <LinearLayout
@@ -49,8 +89,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Placed at: "
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textSize="12sp" />
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <TextView
                                 android:id="@+id/view_order_time"
@@ -58,7 +97,6 @@
                                 android:layout_height="wrap_content"
                                 android:text="9:22 PM"
                                 android:textColor="#995555"
-                                android:textSize="12sp"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -66,8 +104,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text=" on "
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textSize="12sp" />
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <TextView
                                 android:id="@+id/view_order_date"
@@ -75,8 +112,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="2"
                                 android:text="Apr 11, 2013"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textSize="12sp" />
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
 
                         </LinearLayout>
 
@@ -87,7 +123,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_vertical_margin"
-                        android:background="@drawable/rounded_corner"
+                        android:background="@drawable/rounded_corner_dark"
                         android:orientation="vertical" >
 
                         <LinearLayout
@@ -115,8 +151,8 @@
                                     android:id="@+id/view_order_description"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="1/3 oz Dry Vermouth"
-                                    android:textSize="12sp" />
+                                    android:text="1/3 oz Dry Vermouth" />
+
                             </LinearLayout>
 
                             <TextView
@@ -134,9 +170,8 @@
                                 android:layout_height="fill_parent"
                                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                                 android:gravity="center_vertical"
-                                android:text="12"
+                                android:text="12.00"
                                 android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="14sp"
                                 android:textStyle="bold" />
 
                         </LinearLayout>
@@ -183,9 +218,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:gravity="center_vertical"
-                                android:text="Price:"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="14sp" />
+                                android:text="Tip: "
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <TextView
                                 android:id="@+id/TextView18"
@@ -197,22 +231,20 @@
                                 android:textSize="14sp" />
 
                             <TextView
-                                android:id="@+id/TextView13"
+                                android:id="@+id/view_order_tip_amount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:gravity="center_vertical"
-                                android:text="12"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="14sp"
+                                android:text="12.00"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:gravity="center_vertical"
-                                android:text="  Tip, tax and fees: "
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="12sp" />
+                                android:text="  Tax: "
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <TextView
                                 android:id="@+id/TextView11"
@@ -224,13 +256,12 @@
                                 android:textSize="14sp" />
 
                             <TextView
-                                android:id="@+id/feesText"
+                                android:id="@+id/view_order_tax_amount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:gravity="center_vertical"
-                                android:text="2"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="14sp"
+                                android:text="2.00"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -239,9 +270,8 @@
                                 android:layout_height="fill_parent"
                                 android:layout_weight="2"
                                 android:gravity="right|center_vertical"
-                                android:text="  Total:"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="12sp" />
+                                android:text="  Total: "
+                                android:textAppearance="?android:attr/textAppearanceMedium" />
 
                             <TextView
                                 android:id="@+id/TextView09"
@@ -253,12 +283,12 @@
                                 android:textSize="16sp" />
 
                             <TextView
-                                android:id="@+id/totalText"
+                                android:id="@+id/view_order_total_amount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:layout_gravity="right"
                                 android:gravity="center_vertical"
-                                android:text="14"
+                                android:text="14.00"
                                 android:textAppearance="?android:attr/textAppearanceMedium"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
