--- a/res/layout/order_item_mini.xml
+++ b/res/layout/order_item_mini.xml
@@ -44,7 +44,7 @@
 	    android:textSize="16sp" />
 	
 	<TextView
-	    android:id="@+id/view_order_price"
+	    android:id="@+id/view_order_mini_price"
 	    android:layout_width="wrap_content"
 	    android:layout_height="fill_parent"
 	    android:layout_marginRight="@dimen/activity_horizontal_margin"
