--- a/res/menu/menu_main.xml
+++ b/res/menu/menu_main.xml
@@ -2,6 +2,7 @@
 
    	<item 
    	    android:id="@+id/action_tab"
+        android:title="Checkout"
         android:showAsAction="always" />
 	
    	<item 
