--- a/res/layout/map_list_item_closed.xml
+++ b/res/layout/map_list_item_closed.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="1dp"
     android:divider="?android:dividerVertical"
     android:dividerPadding="@dimen/activity_vertical_margin"
     android:showDividers="middle" >
@@ -28,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:text="Finn Mc&apos;Cool&apos;s"
                 android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/darker_gray"
                 android:textStyle="bold" />
 
             <TextView
@@ -46,29 +46,26 @@
                 android:layout_marginTop="@dimen/activity_vertical_margin" >
 
                 <LinearLayout
-                    android:id="@+id/view_map_checkins"
+                    android:id="@+id/view_map_closed"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical" >
 
-                    <TextView
-                        android:id="@+id/view_map_venue_people_count"
+                    <ImageView
+                        android:id="@+id/ImageView01"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="15dp"
                         android:layout_gravity="center_vertical"
-                        android:text="22"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="@android:color/holo_red_light"
-                        android:textStyle="bold" />
+                        android:paddingTop="1dp"
+                        android:src="@drawable/attention" />
 
                     <TextView
-                        android:id="@+id/view_map_people_text"
+                        android:id="@+id/TextView04"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text=" people checked in"
+                        android:text=" Closed"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
-
                 </LinearLayout>
 
                 <LinearLayout
@@ -114,7 +111,7 @@
             android:gravity="center_horizontal"
             android:text="0.8"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@android:color/holo_blue_light"
+            android:textColor="@android:color/darker_gray"
             android:textStyle="bold" />
 
         <TextView
