--- a/res/layout/maps_main.xml
+++ b/res/layout/maps_main.xml
@@ -2,30 +2,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/background"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:padding="@dimen/activity_vertical_margin"
-        android:text="Check in at a Bartsy venue to order drinks and see who else is there"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="14sp" />
+    android:divider="?android:dividerHorizontal"
+    android:orientation="vertical"
+    android:showDividers="end" >
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="188dp" />
+        android:layout_height="225dp" />
 
     <ListView
         android:id="@+id/checkInListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:dividerHeight="1dp"
+        android:footerDividersEnabled="true" >
+
     </ListView>
 
 </LinearLayout>
