--- a/res/layout/orders_main.xml
+++ b/res/layout/orders_main.xml
@@ -7,82 +7,49 @@
     android:gravity="center_horizontal"
     android:orientation="vertical" >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2" >
+
+        <fragment
+            android:id="@+id/view_orders_fragment_open"
+            android:name="com.vendsy.bartsy.view.OpenOrdersSectionFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2" />
+
+        <fragment
+            android:id="@+id/view_orders_fragment_past"
+            android:name="com.vendsy.bartsy.view.PastOrdersSectionFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" >
-
-        <ToggleButton
-            android:id="@+id/button_orders_ready"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:checked="true"
-            android:text="ToggleButton"
-            android:textOff="Ready (0)"
-            android:textOn="Ready (0)"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <ToggleButton
-            android:id="@+id/buttons_orders_accepted"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:checked="true"
-            android:text="ToggleButton"
-            android:textOff="Accepted (0)"
-            android:textOn="Accepted (0)"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <ToggleButton
-            android:id="@+id/button_orders_new"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:checked="true"
-            android:text="ToggleButton"
-            android:textOff="New (0)"
-            android:textOn="New (0)"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-
-    <ScrollView
-        android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+        <ToggleButton
+            android:id="@+id/view_orders_button_open"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:checked="true"
+            android:textOff="Open orders"
+            android:textOn="Open orders" />
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
+        <ToggleButton
+            android:id="@+id/view_orders_button_past"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:textOff="Past orders"
+            android:textOn="Past orders" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="50dp"
-                    android:padding="@dimen/activity_vertical_margin" >
+    </LinearLayout>
 
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/order_list"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="@dimen/activity_vertical_margin" >
-            </LinearLayout>
-        </RelativeLayout>
-
-    </ScrollView>
 </LinearLayout>
