--- a/res/layout/item_order.xml
+++ b/res/layout/item_order.xml
@@ -35,7 +35,7 @@
                        android:gravity="center_vertical"
                        android:text="$"
                        android:textAppearance="?android:attr/textAppearanceSmall"
-                       android:textColor="@android:color/holo_blue_light"
+                       android:textColor="#f83ab3"
                        android:textSize="14sp" />
 
                    <TextView
@@ -45,7 +45,7 @@
                        android:gravity="center_vertical"
                        android:text="10.00"
                        android:textAppearance="?android:attr/textAppearanceSmall"
-                       android:textColor="@android:color/holo_blue_light"
+                       android:textColor="#f83ab3"
                        android:textStyle="bold" />
                </LinearLayout>
 
