--- a/res/layout/menu_item.xml
+++ b/res/layout/menu_item.xml
@@ -10,41 +10,94 @@
         android:layout_height="wrap_content" >
 
         <ImageView
-            android:id="@+id/ImageView11"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_gravity="center_vertical"
-            android:scaleType="centerInside"
+            android:id="@+id/imageView1"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="top"
+            android:layout_marginRight="4dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/drink" />
 
         <TextView
-            android:id="@+id/view_drink_title"
+            android:id="@+id/view_order_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_weight="1"
-            android:hint="Title"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-        
-        <TextView
-            android:id="@+id/view_drink_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="right"
-            android:text="$10"
+            android:layout_gravity="top"
+            android:layout_weight="2"
+            android:text="Martini"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@android:color/holo_blue_light"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/TextView02"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_gravity="top"
+            android:gravity="center_vertical"
+            android:text="$"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#f83ab3"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/view_order_mini_price"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_gravity="top"
+            android:gravity="center_vertical"
+            android:text="12"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#f83ab3"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/view_drink_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+    <LinearLayout
+        android:id="@+id/item_order_description_field"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_gravity="top"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginTop="3dp"
+            android:src="@drawable/wrench" />
+
+        <TextView
+            android:id="@+id/view_order_description"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:text="1/3 oz Dry Vermouth"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/item_order_special_instructions_field"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:layout_gravity="top"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginTop="1dp"
+            android:src="@drawable/star_icon" />
+
+        <TextView
+            android:id="@+id/item_order_special_instructions"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:text="Extra drity"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </LinearLayout>
 
 </LinearLayout>
-
